--- a/app/src/main/res/layout/info_bottom_sheet.xml
+++ b/app/src/main/res/layout/info_bottom_sheet.xml
@@ -1,47 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
 
+    <TextView
+        android:id="@+id/tv_info_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:text="@string/category_delete_title" />
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_info_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="Create Category"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tie_category_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Category name: e.g: Work"
-            android:minHeight="48dp"
-
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+        tools:text="@string/category_delete_description" />
 
     <Button
-        android:id="@+id/btn_category_create"
+        android:id="@+id/btn_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:text="Create" />
-
+        android:layout_margin="16dp"
+        tools:text="@string/delete" />
 
 </LinearLayout>
